--- a/public/assets/css/payroll-report.css
+++ b/public/assets/css/payroll-report.css
@@ -29,18 +29,36 @@ table {
 }
 th, td {
     border: 1px solid #333;
+    border-left: none;
+    border-right: none;
     padding: 8px;
     text-align: center;
 }
+td.titleTD{
+    text-align: left;
+    font-size: 13pt;
+    border: none;
+}
+td.sub.titleTD{
+    font-size: 11pt;
+    padding-left: 25px;
+}
 th {
-    background-color: #f2f2f2;
+    background-color: #e0e0e0;
     -webkit-print-color-adjust: exact;
 }
 .headerTable th {
     background: none;
     border: none;
 }
-
+tr.totals td{
+    font-size: 12pt;
+    font-weight: bold;
+}
+tr.totals td:nth-child(1){
+    text-align: right;
+    padding-right: 50px;
+}
 .headerTable h2 {
     font-size: 12pt;
     font-style: italic;
